--- a/TEST_PAGE.html
+++ b/TEST_PAGE.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./dist/my-web-component.js"></script>
+    <!-- <script src="./dist/my-web-component.js"></script> -->
+    <script src="https://email-domain-management.web.app/my-web-component.js"></script>
     <title>Document</title>
   </head>
   <body>
